# project_W_D

./: .env  Dockerfile  README.md  api.py  app.py  backend_api.py  checks.db  checks_api.db  fraud_detection.py  pyproject.toml  railway.toml  requirements.txt  run_streamlit.py  start.sh  streamlit_app.py  vercel.json  vercel_app.py  wsgi.py
project2/: index.html  script.js  style.css
